// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> Header --- Snapshot +++capturing Snapshot of Header with User 1`] = `
<nav
  className="navbar navbar-inverse"
>
  <div
    className="container"
  >
    <div
      className=""
    >
      <div
        className="navbar-header"
      >
        <a
          className="navbar-brand"
          href="/submissions"
        >
          Owner's Edge
        </a>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li
            className="nav-link"
            role="presentation"
            style={undefined}
          >
            <a
              action="push"
              href="#"
              onClick={[Function]}
              role="button"
            >
              Submissions
            </a>
          </li>
          <li
            className="nav-link"
            role="presentation"
            style={undefined}
          >
            <a
              action="push"
              href="#"
              onClick={[Function]}
              onMouseUp={undefined}
              role="button"
            >
              Submit New
            </a>
          </li>
          <li
            className="nav-link"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              role="button"
            >
              Log Out
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</nav>
`;

exports[`>>> Header --- Snapshot +++capturing Snapshot of Header without User 1`] = `
<nav
  className="navbar navbar-inverse"
>
  <div
    className="container"
  >
    <div
      className=""
    >
      <div
        className="navbar-header"
      >
        <a
          className="navbar-brand"
          href="/submissions"
        >
          Owner's Edge
        </a>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li
            className="nav-link"
            role="presentation"
            style={undefined}
          >
            <a
              action="push"
              href="#"
              onClick={[Function]}
              role="button"
            >
              Log In
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</nav>
`;
